--- a/assessment/community.html
+++ b/assessment/community.html
@@ -1,44 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--Information about webpage that helps browsers and search engines understand the page better.-->
   <head>
-    <!--Charset - character encoding that doc will use-->
-    <!--UTF-8 - Capable of encoding all possible characters in Unicode(standardized system for encoding  and representing text in devices) so good for international use-->
     <meta charset="UTF-8" />
-    <!--Setting viewport(area that is visible to user based on device) settings for webpage.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Preconnect informs browser to establish early connections to the specified origin.-->
-    <!--<link> used for external resources such as, stylesheets (CSS), icons, and other files and not clickable.-->
+    <!--Font from Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!--Cross-origin - Browser will make the request to href without including any credentials (like cookies or HTTP authentication)-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Link external resources to webpage, specifies font family, styles of font to load, normal (0) or italic (1), font to show while Poppins loads, relationship with resource is a stylesheet -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    
-    <!--hypertext reference attribute specifies URL (Uniform Resource Locator) of the resource you want to link to.-->
-    <!--Stylesheet, which contains CSS rules for styling in the same directory as this HTML file-->
+
+    <!--CSS Files-->
     <link rel="stylesheet" href="./css/css_reset.css"/>
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/components.css"/>
     <link rel="stylesheet" href="./css/layout.css"/>
     
-    <!--<script>: JavaScript files in web page, Modules (organize JS code into separate files + import/export functions, objects, or variables between them.-->
-    <!--Embed or reference JavaScript + defer which tells the browser to download script in the background while HTML is being read and interpreted.-->
+    <!--JavaScript Files-->
     <script type="module" src="js/page_load_message.js" defer></script>
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="./js/components.js" defer></script>
 
-    <!-- Appears in the browser tab and is used by search engines.-->
     <title>Community</title>
   </head>
+  
   <body>
     <header>
-      <!-- <a> - used to create hyperlinks, to navigate to another webpage, section of the same page, or an external resource + is clickable.-->
+      <!--Logo-->
       <a href="index.html">
         <img class = "logo" src="./icons/Frame-68.png" alt = "Logo">
       </a>
 
+      <!--Hamburger Menu-->
       <nav>
         <div class="ham-menu">
           <span></span>
@@ -47,6 +39,7 @@
         </div>
       </nav>
 
+      <!--Navigation Bar-->
       <nav id="flexnavbar">
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
@@ -55,8 +48,9 @@
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
 
-      <a class = "cta" href ="contact.html"><button>Contact</button></a>
+      <a class = "cta" href ="login.html"><button>Login</button></a>
 
+      <!--Hamburger Menu-->
       <div class="off-screen-menu">
         <ul>
           <a href="index.html">Home</a>
@@ -64,149 +58,143 @@
           <a href="events.html">Events</a>
           <a class="active" href="community.html">Community</a>
           <a href="insights_recommendations.html">Insights and Recommendations</a>
+          <a href="login.html">Login</a>
         </ul>
       </div>
 
     </header>
-    <div>
-      <main>
+    <main>
 
-        <div class="top-content-recomspage">
-          <div class="topnav">
-            <input type="text" id="searchInput" placeholder="Search..." aria-label="Search">
-          </div>
-          <div class="nav_buttons">
-            <a href="#discussion-form">
-                <button type="button" class="navigation-button">Discussion Board</button>
+      <!-- Search bar for users to search through community dicussion boards -->
+      <div class="top-content-recomspage">
+        <div class="topnav">
+          <input type="text" id="searchInput" placeholder="Search..." aria-label="Search">
+        </div>
+        <div class="nav_buttons">
+          <a href="#discussion-form">
+              <button type="button" class="navigation-button">Discussion Board</button>
+          </a>
+          <button type="button" class="navigation-button" id="notificationButton">Notifications</button>
+        </div>
+      </div>
+
+      <!-- Notification Popup -->
+      <div class="notifications-popup" id="communityNotificationsPopup" style="display: none;">
+        <div class="popup-content">
+          <span class="close-popup" id="closeCommunityNotificationsPopup">&times;</span>
+          <h2>Notifications</h2>
+          <div id="notificationsList">
+            <p>New member joined #Budget community!</p>
+            <a href ="#" class="notification-btn">
+                <button class="view-button">View</button>
             </a>
-            <button type="button" class="navigation-button" id="notificationButton">Notifications</button>
+          </div>
+          <div id="notificationsList">
+            <p>You have 3 new messages.</p>
+            <a href ="#" class="notification-btn">
+                <button class="view-button">View</button>
+            </a>
+          </div>
+          <div id="notificationsList">
+            <p>Your post was liked by Alice</p>
+            <a href ="#" class="notification-btn">
+                <button class="view-button">View</button>
+            </a>
           </div>
         </div>
+      </div>
 
-        <!-- Notification Popup -->
-        <div class="notifications-popup" id="communityNotificationsPopup" style="display: none;">
-          <div class="popup-content">
-            <span class="close-popup" id="closeCommunityNotificationsPopup">&times;</span>
-            <h2>Notifications</h2>
-            <div id="notificationsList">
-              <p>New member joined #Budget community!</p>
-              <a href ="#" class="notification-btn">
-                  <button class="view-button">View</button>
-              </a>
-            </div>
-            <div id="notificationsList">
-              <p>You have 3 new messages.</p>
-              <a href ="#" class="notification-btn">
-                  <button class="view-button">View</button>
-              </a>
-            </div>
-            <div id="notificationsList">
-              <p>Your post was liked by Alice</p>
-              <a href ="#" class="notification-btn">
-                  <button class="view-button">View</button>
-              </a>
-            </div>
-          </div>
+      <!--Notification button popup window-->
+      <div class="view-message-popup" id="viewMessagePopup" style="display: none;">
+        <div class="popup-content">
+          <span class="close-view-message-popup" id="closeViewMessagePopup">&times;</span>
+          <h2>Functionality Not Implemented</h2>
+          <p>This functionality has not been implemented yet.</p>
         </div>
+      </div>
 
-        <div class="view-message-popup" id="viewMessagePopup" style="display: none;">
-          <div class="popup-content">
-            <span class="close-view-message-popup" id="closeViewMessagePopup">&times;</span>
-            <h2>Functionality Not Implemented</h2>
-            <p>This functionality has not been implemented yet.</p>
-          </div>
-        </div>
+      <div class="community-titles">
+        <h2>Your communities</h2>
+      </div>
 
-        <div class="community-titles">
-          <h2>Your communities</h2>
-        </div>
-
-          <!-- Slideshow container code reference: https://www.w3schools.com/howto/howto_js_slideshow.asp--> 
-          <div class="slideshow-container">
-
-            <!-- Full-width images with number and caption text -->
-            <div class="mySlides">
-              <div class="slide-container">
-                <div class="image-container">
-                  <a href="budget-community.html">
-                    <img src="./images/budget.jpg"style="width:100%;">
-                    <div class="text">Budget</div>
-                  </a>
-                </div>
-                <div class="image-container">
-                  <a href="budget-community.html">
-                    <img src="./images/nature.jpg" style="width:100%;">
-                    <div class="text">Nature</div>
-                  </a>
-                </div>
+      <!--Slideshow of communities-->
+      <div class="community-slideshow">
+        <!-- Slideshow container code reference: https://www.w3schools.com/howto/howto_js_slideshow.asp--> 
+        <div class="slideshow-container">
+          <!-- Full-width images with caption text -->
+          <div class="mySlides">
+            <div class="slide-container">
+              <div class="image-container">
+                <a href="budget-community.html">
+                  <img src="./images/budget.jpg"style="width:100%;">
+                  <div class="text">Budget</div>
+                </a>
+              </div>
+              <div class="image-container">
+                <a href="budget-community.html">
+                  <img src="./images/nature.jpg" style="width:100%;">
+                  <div class="text">Nature</div>
+                </a>
               </div>
             </div>
-            <div class="mySlides">
-              <div class="slide-container">
-                <div class="image-container">
-                  <a href="budget-community.html">
-                    <img src="./images/cultural.jpg"style="width:100%;">
-                    <div class="text">Cultural</div>
-                  </a>
-                </div>
-
-                <div class="image-container">
-                  <a href="budget-community.html">
-                    <img src="./images/foodie.jpg" style="width:100%;">
-                    <div class="text">Foodie Adventures</div>
-                  </a>
-                </div>
-
+          </div>
+          <div class="mySlides">
+            <div class="slide-container">
+              <div class="image-container">
+                <a href="budget-community.html">
+                  <img src="./images/cultural.jpg"style="width:100%;">
+                  <div class="text">Cultural</div>
+                </a>
               </div>
+
+              <div class="image-container">
+                <a href="budget-community.html">
+                  <img src="./images/foodie.jpg" style="width:100%;">
+                  <div class="text">Foodie Adventures</div>
+                </a>
+              </div>
+
             </div>
+          </div>
           <!-- Next and previous buttons -->
-          <!--Anchor tag used to perform an action.-->
-          <!--Onclick specifies when link is clicked, execute plusSlides with argument -1, indicating that function should show previous slide in slideshow.-->
-          <!--&#10094 represents special character (left-pointing arrow (◀)) in HTML character reference format.-->
+          <div class="community-arrows">
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
           </div>
-          <br>
-
-          <!-- The dots/circles -->
-          <div style="text-align:left">
-          <!-- Indicate current slide-->
-          <!--Span - inline container to group content for styling or apply JS functions.-->
-          <!--Onclick attribute specifies that when dot is clicked, it executes a JS function called currentSlide with an argument of 1, 2,3 or 4 based on slide number-->
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-          </div>
-
-          <section id="discussion-form" class="discussion-form">
-            <h2>Post a New Discussion</h2>
-            <form id="postForm">
-                <textarea id="postContent" placeholder="What's on your mind?" required></textarea>
-                <button type="submit">Submit</button>
-            </form>
-        </section>
-
-
-        <div class="posts">
-            <h2>Recent Posts</h2>
         </div>
-        <div id="postFeed"></div>
-      </main>
+      </div>
+      <br>
 
-      <footer class="footer">
-        <h2>Acknowledgements</h2>
-        <p>In this website, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
-          I critically reviewed and edited all AI-generated content to ensure it reflects my own
-          understanding and perspective.</p>
-        <nav class="footer-links">
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
-          <a href="privacy.html">Privacy Policy</a>
-          <a href="references.html">References</a>
-        </nav>
-        <!-- &copy is unicode equivalent for copyright symbol (©)-->
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-      </footer>
-    </div>
+      <!--Discussion Board to Create Posts-->
+      <section id="discussion-form" class="discussion-form">
+        <h2>Post a New Discussion</h2>
+        <form id="postForm">
+            <textarea id="postContent" placeholder="What's on your mind?" required></textarea>
+            <button type="submit">Submit</button>
+        </form>
+      </section>
+
+      <!--Discussion Board Posts-->
+      <div class="posts">
+          <h2>Recent Posts</h2>
+      </div>
+      <div id="postFeed"></div>
+    </main>
+
+    <footer class="footer">
+      <h2>Acknowledgements</h2>
+      <p>In this website, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
+        I critically reviewed and edited all AI-generated content to ensure it reflects my own
+        understanding and perspective.</p>
+      <nav class="footer-links">
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="privacy.html">Privacy Policy</a>
+      </nav>
+      <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
+
+    <script type="module" src="js/index.js" defer></script>
+    <script src="./js/components.js" defer></script>
   </body>
 </html>
