--- a/assessment/insights_recommendations.html
+++ b/assessment/insights_recommendations.html
@@ -1,45 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--Information about webpage that helps browsers and search engines understand the page better.-->
   <head>
-    <!--Charset - character encoding that doc will use-->
-    <!--UTF-8 - Capable of encoding all possible characters in Unicode(standardized system for encoding  and representing text in devices) so good for international use-->
     <meta charset="UTF-8" />
-    <!--Setting viewport(area that is visible to user based on device) settings for webpage.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Preconnect informs browser to establish early connections to the specified origin.-->
-    <!--<link> used for external resources such as, stylesheets (CSS), icons, and other files and not clickable.-->
+    <!--Font from Google Fonts.-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!--Cross-origin - Browser will make the request to href without including any credentials (like cookies or HTTP authentication)-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Link external resources to webpage, specifies font family, styles of font to load, normal (0) or italic (1), font to show while Poppins loads, relationship with resource is a stylesheet -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     
-    <!--hypertext reference attribute specifies URL (Uniform Resource Locator) of the resource you want to link to.--> 
-    <!--Stylesheet, which contains CSS rules for styling in the same directory as this HTML file-->
+    <!--CSS Files-->
     <link rel="stylesheet" href="./css/css_reset.css"/>
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/components.css"/>
     <link rel="stylesheet" href="./css/layout.css"/>
 
-    <!--<script> tag used to include JavaScript files in your web page, Modules (organize JS code into separate files + import/export functions, objects, or variables between them.-->
-    <!--Embed or reference JavaScript + defer which tells the browser to download script in the background while HTML is being read and interpreted.-->
+    <!--JavaScript Files-->
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="js/components.js" defer></script>
     <script type="module" src="js/page_load_message.js" defer></script>
 
-    <!-- Appears in the browser tab and is used by search engines.-->
     <title>Insights and Recommendations</title>
   </head>
+
   <body>
     <div id="gridcontainer">
       <header>
-        <!-- <a> - used to create hyperlinks, to navigate to another webpage, section of the same page, or an external resource + is clickable.-->
+        <!--Logo-->
         <a href="index.html">
           <img class = "logo" src="./icons/Frame-68.png" alt = "Logo">
         </a>
   
+        <!--Hamburger Menu-->
         <nav>
           <div class="ham-menu">
             <span></span>
@@ -48,6 +40,7 @@
           </div>
         </nav>
   
+        <!--Navigation Bar-->
         <nav id="flexnavbar">
           <a href="index.html">Home</a>
           <a href="safetyguides.html">Safety Guides</a>
@@ -56,8 +49,9 @@
           <a class="active" href="insights_recommendations.html">Insights and Recommendations</a>
         </nav>
   
-        <a class = "cta" href ="contact.html"><button>Contact</button></a>
+        <a class = "cta" href ="login.html"><button>Login</button></a>
   
+        <!--Hamburger Menu-->
         <div class="off-screen-menu">
           <ul>
             <a href="index.html">Home</a>
@@ -65,18 +59,21 @@
             <a href="events.html">Events</a>
             <a href="community.html">Community</a>
             <a class="active" href="insights_recommendations.html">Insights and Recommendations</a>
+            <a href="login.html">Login</a>
           </ul>
         </div>
   
       </header>
+
       <main>
+        <!-- Search bar for users to search through guides and recommendations -->
         <div class="top-content-recomspage">
           <div class="topnav">
             <input type="text" id="searchInput" placeholder="Search..." aria-label="Search">
           </div>
         </div>
 
-
+        <!--Activites Recommendations Section-->
         <section id="activities" class="activities">
             <h1>Traveller’s favourites</h1>
             <h2>To Do in Brazil</h2>
@@ -86,7 +83,7 @@
                     <img src="./images/adventure1.jpg" alt="Photograph of a woman with ziplining gear">
                     <div class="info">
                         <h3>Brazil Adventures Ziplining</h3>
-                        <p>Zip lining tours at $60 for the next few months!</p>
+                        <p>Zip lining tours at $60 for the next few months! Book a tour on BrazAventuras.com.</p>
                         <span>Rating: ★★★★☆</span>
                     </div>
                 </div>
@@ -94,7 +91,7 @@
                   <img src="./images/adventure2.jpg" alt="Photo of two women scuba diving">
                   <div class="info">
                       <h3>Swim with the sharks!</h3>
-                      <p>6 spots tour: Explore Fernando de Noronha's seas! Visit our site to find out more.</p>
+                      <p>6 spots tour: Explore Fernando de Noronha's seas! Visit our site (NoranhaSeas.org) to find out more.</p>
                       <span>Rating: ★★★★☆</span>
                   </div>
                 </div>
@@ -102,7 +99,7 @@
                   <img src="./images/adventure3.jpg" alt="Activity 1">
                   <div class="info">
                       <h3>The Amazon!</h3>
-                      <p>A tour of 4 hidden gems for photography lovers! Book now on our site!</p>
+                      <p>A tour of 4 hidden gems for photography lovers! Book now on AmazingBrazil.org!</p>
                       <span>Rating: ★★★★☆</span>
                   </div>
                 </div>
@@ -110,7 +107,7 @@
                   <img src="./images/adventure4.jpg" alt="Activity 1">
                   <div class="info">
                       <h3>Want to get away from the city?</h3>
-                      <p>Relax under the sun in Foz do Iguaçu!</p>
+                      <p>Relax under the sun in Foz do Iguaçu! Visit IguaçuTours.net to make a booking.</p>
                       <span>Rating: ★★★★☆</span>
                   </div>
                 </div>
@@ -120,7 +117,7 @@
                     <img src="./images/adventure5.jpg" alt="Photo of woman on Kayak">
                     <div class="info">
                         <h3>Kayaking</h3>
-                        <p>3 peaceful yet adventurous kayak experiences!</p>
+                        <p>3 peaceful yet adventurous kayak experiences through Kayakzone.org!</p>
                         <span>Rating: ★★★☆☆</span>
                     </div>
                 </div>
@@ -128,7 +125,7 @@
                   <img src="./images/adventure6.webp" alt="Photograph of Cachoeira do Buracão caves">
                   <div class="info">
                       <h3>Cachoeira do Buracão Caves</h3>
-                      <p>2 day trip to Cachoeira do Buracão</p>
+                      <p>2 day trip to Cachoeira do Buracão. Book now on BuracãoCaves.org</p>
                       <span>Rating: ★★★☆☆</span>
                   </div>
                 </div>
@@ -136,7 +133,7 @@
                   <img src="./images/adventure7.webp" alt="Blue Grotto Caves">
                   <div class="info">
                     <h3>Blue Grotto in Bonito, Mato Grosso do Sul</h3>
-                    <p>Explore the natural beauty of Blue Grotto</p>
+                    <p>Explore the natural beauty of Blue Grotto through our exclusive tours. Visit our site now (BlueGrotto.com)!</p>
                     <span>Rating: ★★★☆☆</span>
                   </div>
                 </div>
@@ -144,10 +141,11 @@
                   <img src="./images/adventure8.jpeg" alt="Pantanal">
                   <div class="info">
                       <h3>Pantanal</h3>
-                      <p>Explore the tropical wetlands of Pantanal!</p>
+                      <p>Explore the tropical wetlands of Pantanal via PantanalTours!</p>
                       <span>Rating: ★★★☆☆</span>
+                  </div>
                 </div>
-                </div>
+                <!--See More button to expand and reveal hidden items-->
                 <div class="see-more">
                   <p>See more</p>
                   <span class="arrow">▼</span>
@@ -155,10 +153,10 @@
             </div>
         </section>
 
+        <!--Food and Drink Recommendations Section-->
         <section id="food-drink" class="food-drink">
           <h2>Food and Drink</h2>
           <div class="gallery" id="food-drink-section">
-              <!-- Initial 4 items and hidden items as in the previous section -->
                <!-- Initial 4 items -->
               <div class="item">
                 <img src="./images/food-drink1.jpg" alt="Noah Gastronomia Paulista">
@@ -226,6 +224,7 @@
                   <span>Rating: ★★★☆☆</span>
               </div>
             </div>
+            <!--See More button to expand and reveal hidden items-->
             <div class="see-more">
               <p>See more</p>
               <span class="arrow">▼</span>
@@ -233,11 +232,11 @@
           </div>
         </section>
 
+        <!--Accomodations Recommendations Section-->
         <section id="accommodations" class="accommodations">
           <h1>Essentials</h1>
           <h2>Accommodations</h2>
           <div class="gallery" id="accommodations-section">
-              <!-- Initial 4 items and hidden items as in the previous section -->
                <!-- Initial 4 items -->
               <div class="item">
                 <img src="./images/accomodation1.jpg" alt="Hotel Colline de France">
@@ -289,6 +288,7 @@
                   <span>Rating: ★★★☆☆</span>
               </div>
             </div>
+            <!--See More button to expand and reveal hidden items-->
             <div class="see-more">
               <p>See more</p>
               <span class="arrow">▼</span>
@@ -296,16 +296,19 @@
           </div>
         </section>
 
-
+        <!--Visa Guides Section-->
         <section id="visa" class="visa">
           <h2>Visa</h2>
           <div class="gallery" id="visa-section">
-              <!-- Initial 4 items and hidden items as in the previous section -->
-              <div class="item" href="visa.html">
+              <!-- Initial 4 items -->
+              <div class="item">
                 <img src="./images/visa1.jpg" alt="Photo of map, camera, cash and passport">
                 <div class="info">
                     <h3>Visa Guide 101</h3>
                     <p>What you need to know about visas before coming to Brazil</p>
+                    <a href="visa.html" >
+                      <button class="visa-button">Read More</button>
+                    </a>
                 </div>
             </div>
             <div class="item"  href="visa.html">
@@ -313,6 +316,9 @@
               <div class="info">
                   <h3>All about the new visa rules</h3>
                   <p>Updates to visa restrictions Brazil</p>
+                  <a href="visa.html" >
+                    <button class="visa-button">Read More</button>
+                  </a>
               </div>
             </div>
             <div class="item" href="visa.html">
@@ -320,6 +326,9 @@
               <div class="info">
                   <h3>Visa and money, all you need to know</h3>
                   <p>Feel prepared for a smooth airport experience</p>
+                  <a href="visa.html" >
+                    <button class="visa-button">Read More</button>
+                  </a>
               </div>
             </div>
             <div class="item" href="visa.html">
@@ -327,6 +336,9 @@
               <div class="info">
                   <h3>Visa information for European travellers</h3>
                   <p>Flying from Europe? Here is what you need to know!</p>
+                  <a href="visa.html" >
+                    <button class="visa-button">Read More</button>
+                  </a>
               </div>
             </div>
 
@@ -336,6 +348,9 @@
                 <div class="info">
                     <h3>Visa exempted countries!</h3>
                     <p>Find out if your country has been added to the list!</p>
+                    <a href="visa.html" >
+                      <button class="visa-button">Read More</button>
+                    </a>
                 </div>
             </div>
             <div class="item hidden hideable">
@@ -343,8 +358,12 @@
               <div class="info">
                   <h3>Visa application process</h3>
                   <p>Find out how to apply for a visa!</p>
+                  <a href="visa.html" >
+                    <button class="visa-button">Read More</button>
+                  </a>
               </div>
           </div>
+            <!--See More button to expand and reveal hidden items-->
             <div class="see-more">
               <p>See more</p>
               <span class="arrow">▼</span>
@@ -353,7 +372,7 @@
         </section>
 
 
-        <!-- Insights Page Modal Structure -->
+        <!-- Insights Page Popup Window (Modal) -->
         <div class="modal insights-modal" id="insightsModal" style="display: none;">
           <div class="modal-content">
               <span class="close" id="insightsModalClose">&times;</span>
@@ -362,9 +381,17 @@
           </div>
         </div>
 
-
+        <!-- Popup window (Modal) -->
+        <div class="modal visa-modal" id="visaModal" style="display: none;">
+          <div class="modal-content">
+              <span class="close" id="visaModalClose">&times;</span>
+              <h2 id="visaModalTitle">Visa Title</h2>
+              <p id="visaModalContent">Detailed information about the Visa goes here.</p>
+          </div>
+        </div>
 
       </main>
+
       <footer class="footer">
         <h2>Acknowledgements</h2>
         <p>In this website, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
@@ -374,11 +401,10 @@
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <a href="privacy.html">Privacy Policy</a>
-          <a href="references.html">References</a>
         </nav>
-        <!-- &copy is unicode equivalent for copyright symbol (©)-->
         <p>&copy; 2024 Your Name. All rights reserved.</p>
       </footer>
+
     </div>
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="js/components.js" defer></script>
