--- a/assessment/privacy.html
+++ b/assessment/privacy.html
@@ -1,48 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--Information about webpage that helps browsers and search engines understand the page better.-->
   <head>
-    <!--Charset - character encoding that doc will use-->
-    <!--UTF-8 - Capable of encoding all possible characters in Unicode(standardized system for encoding  and representing text in devices) so good for international use-->
     <meta charset="UTF-8" />
-    <!--Setting viewport(area that is visible to user based on device) settings for webpage.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="theme-color" content="#ABD451"> <!--Sets theme color for browser’s UI for mobile devices.-->
-    <!-- Only needed if you have an apple phone -->
     <link rel="logo" sizes="192x192" href="/DECO7140/assessment/icons/frame_67.png"> <!-- specifies icon for application (specific requirements for iOS-->
 
-    <!-- Preconnect informs browser to establish early connections to the specified origin.-->
-    <!--<link> used for external resources such as, stylesheets (CSS), icons, and other files and not clickable.-->
+    <!--Font from Google Fonts.-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!--Cross-origin - Browser will make the request to href without including any credentials (like cookies or HTTP authentication)-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Link external resources to webpage, specifies font family, styles of font to load, normal (0) or italic (1), font to show while Poppins loads, relationship with resource is a stylesheet -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     
-    <!--hypertext reference attribute specifies URL (Uniform Resource Locator) of the resource you want to link to.-->
-    <!--Stylesheet, which contains CSS rules for styling in the same directory as this HTML file-->
+    <!--CSS Files-->
     <link rel="stylesheet" href="./css/css_reset.css"/>
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/components.css"/>
     <link rel="stylesheet" href="./css/layout.css"/>
     
-    <!--<script> tag used to include JavaScript files in your web page, Modules (organize JS code into separate files + import/export functions, objects, or variables between them.-->
-    <!--Embed or reference JavaScript + defer which tells the browser to download script in the background while HTML is being read and interpreted.-->
+    <!--JavaScript Files-->
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="js/components.js" defer></script>
     <script type="module" src="js/page_load_message.js" defer></script>
 
-    <!-- Appears in the browser tab and is used by search engines.-->
     <title>Home</title>
   </head>
+
   <body id="gridcontainer">
     <header>
-      <!-- <a> - used to create hyperlinks, to navigate to another webpage, section of the same page, or an external resource + is clickable.-->
+      <!--Logo-->
       <a href="index.html">
         <img class = "logo" src="./icons/Frame-68.png" alt = "Logo">
       </a>
 
+      <!--Hamburger Menu-->
       <nav>
         <div class="ham-menu">
           <span></span>
@@ -51,31 +42,37 @@
         </div>
       </nav>
 
+      <!--Navigation Bar-->
       <nav id="flexnavbar">
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
-        <a class="active" href="events.html">Events</a>
+        <a href="events.html">Events</a>
         <a href="community.html">Community</a>
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
 
-      <a class = "cta" href ="contact.html"><button>Contact</button></a>
+      <a class = "cta" href ="login.html"><button>Login</button></a>
 
+      <!--Hamburger Menu-->
       <div class="off-screen-menu">
         <ul>
           <a href="index.html">Home</a>
           <a href="safetyguides.html">Safety Guides</a>
           <a href="events.html">Events</a>
-          <a class="active" href="community.html">Community</a>
+          <a href="community.html">Community</a>
           <a href="insights_recommendations.html">Insights and Recommendations</a>
+          <a href="login.html">Login</a>
         </ul>
       </div>
     </header>
-    <main>
-        <div class="privacy-title">
-            <h1>Privacy Policy for Solo Tourer</h1>
-        </div>
 
+    <main>
+      <!-- Title -->
+      <div class="privacy-title">
+          <h1>Privacy Policy for Solo Tourer</h1>
+      </div>
+
+        <!-- Text content of privacy policy -->
       <div class="guide-text">
         <h2>Introduction</h2>
         <p>Solo Tourer is committed to safeguarding your privacy and ensuring that your personal information is protected. This Privacy Policy explains how we collect, use, share, and protect your data when you use our app and website, designed to help women aged 23 to 29 solo travel confidently and safely in Rio de Janeiro, Brazil.</p>
@@ -110,6 +107,7 @@
     </div>
 
     </main>
+
     <footer class="footer">
       <h2>Acknowledgements</h2>
       <p>In this website, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
@@ -119,10 +117,9 @@
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="privacy.html">Privacy Policy</a>
-        <a href="references.html">References</a>
     </nav>
-      <!-- &copy is unicode equivalent for copyright symbol (©)-->
       <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
+
   </body>
 </html>
